cse-ppl-master/Assignments/assignment_1/src/main/mp/parser/.antlr/MPParser.py
# Generated from c:\Users\DELL\Documents\GitHub\Principle-of-Programming-Languages\cse-ppl-master\Assignments\assignment_1\src\main\mp\parser\MP.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "':='", "'<='", "'>='", "'<>'", "'='", 
                     "'<'", "'>'", "'('", "')'", "'['", "']'", "';'", "','", 
                     "':'", "'..'" ]

    symbolicNames = [ "<INVALID>", "FUNCTION", "PROCEDURE", "BEGIN", "END", 
                      "TRUE", "FALSE", "IF", "THEN", "ELSE", "FOR", "WHILE", 
                      "WITH", "DO", "TO", "DOWNTO", "RETURN", "BREAK", "CONTINUE", 
                      "INTEGER", "STRING", "REAL", "BOOLEAN", "ARRAY", "VAR", 
                      "OF", "DIV_INT", "MOD", "NOT", "AND", "OR", "ADD", 
                      "SUB", "MUL", "DIV", "ASSIGN", "LTE", "GTE", "NEQ", 
                      "EQ", "LT", "GT", "LP", "RP", "LSB", "RSB", "SEMI", 
                      "COMMA", "COLON", "DOTDOT", "STRING_LITERAL", "REAL_LITERAL", 
                      "INTEGER_LITERAL", "ID", "BLOCK_COMMENT", "LINE_COMMENT", 
                      "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_var_declare = 1
    RULE_func_declare = 2
    RULE_proc_declare = 3
    RULE_stmt = 4
    RULE_assign_stmt = 5
    RULE_assign_body = 6
    RULE_assign_lhs = 7
    RULE_assign_tail = 8
    RULE_if_stmt = 9
    RULE_while_stmt = 10
    RULE_for_stmt = 11
    RULE_with_stmt = 12
    RULE_brk_stmt = 13
    RULE_cont_stmt = 14
    RULE_ret_stmt = 15
    RULE_ret_stmt_proc = 16
    RULE_ret_stmt_func = 17
    RULE_call_stmt = 18
    RULE_compound_stmt = 19
    RULE_exp_bool = 20
    RULE_exp_int = 21
    RULE_exp_real = 22
    RULE_exp_str = 23
    RULE_exp = 24
    RULE_exp1 = 25
    RULE_exp2 = 26
    RULE_exp3 = 27
    RULE_exp4 = 28
    RULE_operands = 29
    RULE_postfix_array_exp = 30
    RULE_primary_exp = 31
    RULE_call_exp = 32
    RULE_index_exp = 33
    RULE_params_list = 34
    RULE_ids_list_with_type = 35
    RULE_ids_list = 36
    RULE_exps_list = 37
    RULE_stmts_list = 38
    RULE_method_types = 39
    RULE_data_types = 40
    RULE_compound_types = 41
    RULE_primitive_types = 42
    RULE_literal = 43
    RULE_number = 44
    RULE_op_and_then = 45
    RULE_op_or_else = 46
    RULE_boolean_literal = 47

    ruleNames =  [ "program", "var_declare", "func_declare", "proc_declare", 
                   "stmt", "assign_stmt", "assign_body", "assign_lhs", "assign_tail", 
                   "if_stmt", "while_stmt", "for_stmt", "with_stmt", "brk_stmt", 
                   "cont_stmt", "ret_stmt", "ret_stmt_proc", "ret_stmt_func", 
                   "call_stmt", "compound_stmt", "exp_bool", "exp_int", 
                   "exp_real", "exp_str", "exp", "exp1", "exp2", "exp3", 
                   "exp4", "operands", "postfix_array_exp", "primary_exp", 
                   "call_exp", "index_exp", "params_list", "ids_list_with_type", 
                   "ids_list", "exps_list", "stmts_list", "method_types", 
                   "data_types", "compound_types", "primitive_types", "literal", 
                   "number", "op_and_then", "op_or_else", "boolean_literal" ]

    EOF = Token.EOF
    FUNCTION=1
    PROCEDURE=2
    BEGIN=3
    END=4
    TRUE=5
    FALSE=6
    IF=7
    THEN=8
    ELSE=9
    FOR=10
    WHILE=11
    WITH=12
    DO=13
    TO=14
    DOWNTO=15
    RETURN=16
    BREAK=17
    CONTINUE=18
    INTEGER=19
    STRING=20
    REAL=21
    BOOLEAN=22
    ARRAY=23
    VAR=24
    OF=25
    DIV_INT=26
    MOD=27
    NOT=28
    AND=29
    OR=30
    ADD=31
    SUB=32
    MUL=33
    DIV=34
    ASSIGN=35
    LTE=36
    GTE=37
    NEQ=38
    EQ=39
    LT=40
    GT=41
    LP=42
    RP=43
    LSB=44
    RSB=45
    SEMI=46
    COMMA=47
    COLON=48
    DOTDOT=49
    STRING_LITERAL=50
    REAL_LITERAL=51
    INTEGER_LITERAL=52
    ID=53
    BLOCK_COMMENT=54
    LINE_COMMENT=55
    WS=56
    UNCLOSE_STRING=57
    ILLEGAL_ESCAPE=58
    ERROR_CHAR=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def var_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Var_declareContext)
            else:
                return self.getTypedRuleContext(MPParser.Var_declareContext,i)


        def func_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Func_declareContext)
            else:
                return self.getTypedRuleContext(MPParser.Func_declareContext,i)


        def proc_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Proc_declareContext)
            else:
                return self.getTypedRuleContext(MPParser.Proc_declareContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 99
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MPParser.VAR]:
                    self.state = 96
                    self.var_declare()
                    pass
                elif token in [MPParser.FUNCTION]:
                    self.state = 97
                    self.func_declare()
                    pass
                elif token in [MPParser.PROCEDURE]:
                    self.state = 98
                    self.proc_declare()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 101 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.VAR))) != 0)):
                    break

            self.state = 103
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def ids_list_with_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Ids_list_with_typeContext)
            else:
                return self.getTypedRuleContext(MPParser.Ids_list_with_typeContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def getRuleIndex(self):
            return MPParser.RULE_var_declare




    def var_declare(self):

        localctx = MPParser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(MPParser.VAR)
            self.state = 109 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 106
                self.ids_list_with_type()
                self.state = 107
                self.match(MPParser.SEMI)
                self.state = 111 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MPParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LP(self):
            return self.getToken(MPParser.LP, 0)

        def RP(self):
            return self.getToken(MPParser.RP, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def data_types(self):
            return self.getTypedRuleContext(MPParser.Data_typesContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compound_stmt(self):
            return self.getTypedRuleContext(MPParser.Compound_stmtContext,0)


        def params_list(self):
            return self.getTypedRuleContext(MPParser.Params_listContext,0)


        def var_declare(self):
            return self.getTypedRuleContext(MPParser.Var_declareContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_func_declare




    def func_declare(self):

        localctx = MPParser.Func_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_func_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(MPParser.FUNCTION)
            self.state = 114
            self.match(MPParser.ID)
            self.state = 115
            self.match(MPParser.LP)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 116
                self.params_list()


            self.state = 119
            self.match(MPParser.RP)
            self.state = 120
            self.match(MPParser.COLON)
            self.state = 121
            self.data_types()
            self.state = 122
            self.match(MPParser.SEMI)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 123
                self.var_declare()


            self.state = 126
            self.compound_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Proc_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LP(self):
            return self.getToken(MPParser.LP, 0)

        def RP(self):
            return self.getToken(MPParser.RP, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compound_stmt(self):
            return self.getTypedRuleContext(MPParser.Compound_stmtContext,0)


        def params_list(self):
            return self.getTypedRuleContext(MPParser.Params_listContext,0)


        def var_declare(self):
            return self.getTypedRuleContext(MPParser.Var_declareContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_proc_declare




    def proc_declare(self):

        localctx = MPParser.Proc_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_proc_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(MPParser.PROCEDURE)
            self.state = 129
            self.match(MPParser.ID)
            self.state = 130
            self.match(MPParser.LP)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.ID:
                self.state = 131
                self.params_list()


            self.state = 134
            self.match(MPParser.RP)
            self.state = 135
            self.match(MPParser.SEMI)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 136
                self.var_declare()


            self.state = 139
            self.compound_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compound_stmt(self):
            return self.getTypedRuleContext(MPParser.Compound_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(MPParser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(MPParser.While_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(MPParser.For_stmtContext,0)


        def with_stmt(self):
            return self.getTypedRuleContext(MPParser.With_stmtContext,0)


        def brk_stmt(self):
            return self.getTypedRuleContext(MPParser.Brk_stmtContext,0)


        def cont_stmt(self):
            return self.getTypedRuleContext(MPParser.Cont_stmtContext,0)


        def ret_stmt(self):
            return self.getTypedRuleContext(MPParser.Ret_stmtContext,0)


        def assign_stmt(self):
            return self.getTypedRuleContext(MPParser.Assign_stmtContext,0)


        def call_stmt(self):
            return self.getTypedRuleContext(MPParser.Call_stmtContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_stmt




    def stmt(self):

        localctx = MPParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stmt)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.compound_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.if_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.while_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 144
                self.for_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 145
                self.with_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 146
                self.brk_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 147
                self.cont_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 148
                self.ret_stmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 149
                self.assign_stmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 150
                self.call_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_body(self):
            return self.getTypedRuleContext(MPParser.Assign_bodyContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def getRuleIndex(self):
            return MPParser.RULE_assign_stmt




    def assign_stmt(self):

        localctx = MPParser.Assign_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assign_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.assign_body()
            self.state = 154
            self.match(MPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_lhs(self):
            return self.getTypedRuleContext(MPParser.Assign_lhsContext,0)


        def ASSIGN(self):
            return self.getToken(MPParser.ASSIGN, 0)

        def assign_tail(self):
            return self.getTypedRuleContext(MPParser.Assign_tailContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_assign_body




    def assign_body(self):

        localctx = MPParser.Assign_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assign_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.assign_lhs()
            self.state = 157
            self.match(MPParser.ASSIGN)
            self.state = 158
            self.assign_tail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_lhsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def index_exp(self):
            return self.getTypedRuleContext(MPParser.Index_expContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_assign_lhs




    def assign_lhs(self):

        localctx = MPParser.Assign_lhsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assign_lhs)
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.match(MPParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.index_exp()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_tailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_lhs(self):
            return self.getTypedRuleContext(MPParser.Assign_lhsContext,0)


        def ASSIGN(self):
            return self.getToken(MPParser.ASSIGN, 0)

        def assign_tail(self):
            return self.getTypedRuleContext(MPParser.Assign_tailContext,0)


        def exp(self):
            return self.getTypedRuleContext(MPParser.ExpContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_assign_tail




    def assign_tail(self):

        localctx = MPParser.Assign_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assign_tail)
        try:
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.assign_lhs()
                self.state = 165
                self.match(MPParser.ASSIGN)
                self.state = 166
                self.assign_tail()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.exp(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MPParser.IF, 0)

        def exp_bool(self):
            return self.getTypedRuleContext(MPParser.Exp_boolContext,0)


        def THEN(self):
            return self.getToken(MPParser.THEN, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.StmtContext)
            else:
                return self.getTypedRuleContext(MPParser.StmtContext,i)


        def ELSE(self):
            return self.getToken(MPParser.ELSE, 0)

        def getRuleIndex(self):
            return MPParser.RULE_if_stmt




    def if_stmt(self):

        localctx = MPParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_if_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(MPParser.IF)
            self.state = 172
            self.exp_bool()
            self.state = 173
            self.match(MPParser.THEN)
            self.state = 174
            self.stmt()
            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 175
                self.match(MPParser.ELSE)
                self.state = 176
                self.stmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(MPParser.WHILE, 0)

        def exp_bool(self):
            return self.getTypedRuleContext(MPParser.Exp_boolContext,0)


        def DO(self):
            return self.getToken(MPParser.DO, 0)

        def stmt(self):
            return self.getTypedRuleContext(MPParser.StmtContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_while_stmt




    def while_stmt(self):

        localctx = MPParser.While_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_while_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(MPParser.WHILE)
            self.state = 180
            self.exp_bool()
            self.state = 181
            self.match(MPParser.DO)
            self.state = 182
            self.stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(MPParser.FOR, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(MPParser.ASSIGN, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ExpContext)
            else:
                return self.getTypedRuleContext(MPParser.ExpContext,i)


        def DO(self):
            return self.getToken(MPParser.DO, 0)

        def stmt(self):
            return self.getTypedRuleContext(MPParser.StmtContext,0)


        def TO(self):
            return self.getToken(MPParser.TO, 0)

        def DOWNTO(self):
            return self.getToken(MPParser.DOWNTO, 0)

        def getRuleIndex(self):
            return MPParser.RULE_for_stmt




    def for_stmt(self):
